--- a/SinglyLinkedList.csproj
+++ b/SinglyLinkedList.csproj
@@ -51,5 +51,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DoublyLinkedList\DoublyLinkedList.csproj">
+      <Project>{C54684A0-B752-4E48-BC2C-DC9542A65494}</Project>
+      <Name>DoublyLinkedList</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
