--- a/SinglyLinkedList.csproj
+++ b/SinglyLinkedList.csproj
@@ -52,6 +52,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BinarySearchTree\BinarySearchTree.csproj">
+      <Project>{C74FF431-42DE-4FBD-840F-F945C5B54EFC}</Project>
+      <Name>BinarySearchTree</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DoublyLinkedList\DoublyLinkedList.csproj">
       <Project>{C54684A0-B752-4E48-BC2C-DC9542A65494}</Project>
       <Name>DoublyLinkedList</Name>
