--- a/SinglyLinkedList.csproj
+++ b/SinglyLinkedList.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StarkbankEcdsa, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b2e6337a5d77bfbc, processorArchitecture=MSIL">
+      <HintPath>packages\starkbank-ecdsa.1.3.3\lib\net452\StarkbankEcdsa.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,19 +47,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinarySearchTree.cs" />
+    <Compile Include="HeapSort.cs" />
     <Compile Include="LinkedList.cs" />
     <Compile Include="Node.cs" />
+    <Compile Include="PracticeProgram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BinarySearchTree\BinarySearchTree.csproj">
-      <Project>{C74FF431-42DE-4FBD-840F-F945C5B54EFC}</Project>
-      <Name>BinarySearchTree</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DoublyLinkedList\DoublyLinkedList.csproj">
       <Project>{C54684A0-B752-4E48-BC2C-DC9542A65494}</Project>
       <Name>DoublyLinkedList</Name>
